# tmux-macros

./: .gitignore  .pre-commit-config.yaml  errors.py  macros.py  macros.tmux  my_typings.py  pyproject.toml  run.sh  src  tmux_macros.conf  utils.py
