[project]
name = "tmux-macros"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.basedpyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
]
