[project]
name = "tmux-macros"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "returns>=0.26.0",
]

[tool.basedpyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnusedVariable = "warning"

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "icecream>=2.1.8",
    "ruff>=0.14.10",
]
